--- a/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
+++ b/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
@@ -85,17 +85,21 @@
   <ItemGroup>
     <ClInclude Include="gamemanager.h" />
     <ClInclude Include="guimanager.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="scene.h" />
+    <ClInclude Include="sceneobject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemanager.cpp" />
     <ClCompile Include="guimanager.cpp" />
+    <ClCompile Include="model.cpp" />
     <ClCompile Include="myGame.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="scene.cpp" />
+    <ClCompile Include="sceneobject.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
