--- a/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
+++ b/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
@@ -83,6 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="building.h" />
     <ClInclude Include="gamemanager.h" />
     <ClInclude Include="guimanager.h" />
     <ClInclude Include="model.h" />
@@ -91,8 +92,11 @@
     <ClInclude Include="sceneobject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="texturemanager.h" />
+    <ClInclude Include="vec3.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="building.cpp" />
     <ClCompile Include="gamemanager.cpp" />
     <ClCompile Include="guimanager.cpp" />
     <ClCompile Include="model.cpp" />
@@ -104,6 +108,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="texturemanager.cpp" />
+    <ClCompile Include="vec3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
