--- a/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
+++ b/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="player.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="sceneobject.h" />
+    <ClInclude Include="skydome.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="texturemanager.h" />
@@ -104,6 +105,7 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="scene.cpp" />
     <ClCompile Include="sceneobject.cpp" />
+    <ClCompile Include="skydome.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
