--- a/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj.filters
+++ b/GryKomputerowe_lab5/GryKomputerowe_lab5/GryKomputerowe_lab5.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="skydome.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="skydome.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="point.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
